--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.9
+  firebase_database: ^10.0.14
 
 
   # The following adds the Cupertino Icons font to your application.
